--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,5 @@
+[![.github/workflows/blank.yml](https://github.com/Soer2/Soer2/actions/workflows/blank.yml/badge.svg)](https://github.com/Soer2/Soer2/actions/workflows/blank.yml)
+
 # This is a basic workflow to help you get started with Actions
 soer2
 name: CI
